[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.1",
    "bcrypt>=5.0.0",
    "certifi>=2025.11.12",
    "dnspython>=2.8.0",
    "ping3>=5.1.5",
    "pymongo>=4.15.4",
    "pyopenssl>=25.3.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
]
